UAV.h, cpp 수정 - Inverse Dynamic 추가, hexarotor parameter 값 검증 SerialRobot.h 삭제 - SE3Parametrization 으로 바꿈 UAVTrajectory 프로젝트 생성 - SE3Parametrization 클래스 생성

--- a/UAVTG/UAVDyn/UAVDyn.vcxproj
+++ b/UAVTG/UAVDyn/UAVDyn.vcxproj
@@ -116,12 +116,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ProjectReference Include="..\irDyn\irDyn.vcxproj">
+      <Project>{aa1b0fa8-59f4-46cf-a207-951238792ec8}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\irMath\irMath.vcxproj">
       <Project>{cf4ad38d-eb41-4c5a-ab4a-5b9c070c93ad}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SerialRobot.h" />
     <ClInclude Include="UAV.h" />
   </ItemGroup>
   <ItemGroup>
