- 적분기 수정(지수꺼 가지고 옴) - PTPOptimization 작업 중

--- a/UAVTG/UAVTrajectory/UAVTrajectory.vcxproj
+++ b/UAVTG/UAVTrajectory/UAVTrajectory.vcxproj
@@ -116,10 +116,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="HexarotorPTPOptimization.h" />
     <ClInclude Include="PTPOptimization.h" />
     <ClInclude Include="SE3Parametrization.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="HexarotorPTPOptimization.cpp" />
     <ClCompile Include="PTPOptimization.cpp" />
     <ClCompile Include="SE3Parametrization.cpp" />
   </ItemGroup>
