- UAV.h : solveUAVDiffInverseDynamics 추가 - HexarotorPTPOptimization 추가 & 작업중 - PTPOptimization class 80-90% 정도 작업 완료 - SE3Parametrization 에 있는  calculateVelocityValues 함수 수정 : forwardkinematics(SE3) 도 같이 계산하도록 수정

--- a/UAVTG/TestCode/TestCode.vcxproj
+++ b/UAVTG/TestCode/TestCode.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="TestMain.cpp" />
+    <ClCompile Include="HexarotorTestMain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\irDyn\irDyn.vcxproj">
