--- a/UAVTG/TestCode/TestCode.vcxproj.filters
+++ b/UAVTG/TestCode/TestCode.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TestMain.cpp">
+    <ClCompile Include="HexarotorTestMain.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
