--- a/UAVTG/TestCode/TestCode.vcxproj
+++ b/UAVTG/TestCode/TestCode.vcxproj
@@ -79,7 +79,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\SNURobotics\include\;..\;C:\SNURobotics\include\OpenSceneGraph\;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\SNURobotics\include\;..\;C:\SNURobotics\include\OpenSceneGraph\;.\irRenderer</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_WINDOWS;_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_DEPRECATE;_CONSOLE;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
@@ -102,7 +102,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\SNURobotics\include\;..\;C:\SNURobotics\include\OpenSceneGraph\;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\SNURobotics\include\;..\;C:\SNURobotics\include\OpenSceneGraph\;.\irRenderer</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_WINDOWS;_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_DEPRECATE;_CONSOLE;NDEBUG;NLOG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
@@ -127,9 +127,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="HexarotorTestMain.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\irDyn\irDyn.vcxproj">
       <Project>{aa1b0fa8-59f4-46cf-a207-951238792ec8}</Project>
     </ProjectReference>
@@ -145,6 +142,9 @@
     <ProjectReference Include="..\UAVTrajectory\UAVTrajectory.vcxproj">
       <Project>{3bb13be7-5bd5-45df-aa33-b9cd7cde4711}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="HexarotorTestMain.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
